<resources>
    <string name="app_name">satu</string>
    <string name="login">LOGIN</string>
    <string name="gmbr">gmbr</string>
    <string name="judul">JUDUL</string>
    <string name="biodata">BIODATA</string>
    <string name="Nama" />
    <string name="nama_app">Nama APP</string>
    <string name="biodataa">Biodata</string>
    <string name="namaa">Nama :</string>
    <string name="andi_nurul_fadhilah">Andi Nurul Fadhilah</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="perempuan">Perempuan</string>
</resources>