<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:background="@color/coklat"
        android:orientation="horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/linear"
        android:layout_alignBottom="@id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/nama_app"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignTop="@id/linear2"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="-50dp"
        android:backgroundTint="@color/cardview_dark_background" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear"
        android:background="@color/ivory"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/biodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/linear2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/biodataa"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/biodata"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/namaa"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/nama"
        android:layout_alignBottom="@id/nama"
        android:layout_toEndOf="@id/nama"
        android:gravity="center"
        android:text="@string/andi_nurul_fadhilah" />

    <TextView
        android:id="@+id/jns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/nama"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/jenis_kelamin"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/jns"
        android:layout_alignBottom="@id/jns"
        android:layout_toEndOf="@id/jns"
        android:gravity="center"
        android:text="@string/perempuan" />

</RelativeLayout>